--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "jwt-decode": "^2.2.0",
+    "react": "^16.13.0",
     "react-datepicker": "^2.5.0",
-    "react-router-dom": "^5.0.0"
+    "react-dom": "^16.13.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.4.0",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
