--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "http-proxy-middleware": "^1.0.2",
-    "jwt-decode": "^2.2.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
-    "express": "^4.16.3",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.2",
     "jsonwebtoken": "^7.4.2",
+    "jwt-decode": "^2.2.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.15",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -39,7 +39,6 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.17.5"
   },
-  
   "author": "",
   "license": "ISC"
 }
