--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "nodemon": "^1.18.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
