--- a/netflyx/package.json
+++ b/netflyx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "netflyx",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,27 +7,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.18.0",
-    "bootstrap": "^4.3.1",
+    "axios": "^0.19.2",
     "create-react-hook": "^3.0.2",
     "json-server": "^0.16.1",
-    "jwt-decode": "^2.2.0",
-    "rc-slider": "^9.3.1",
-    "react": "^16.13.0",
-    "react-awesome-slider": "^4.1.0",
-    "react-datepicker": "^2.5.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-icons-kit": "^1.3.1",
     "react-id-swiper": "^4.0.0",
-    "react-player": "^2.6.0",
+    "react-player": "^2.5.0",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.4.0",
-    "react-slider": "^1.0.8",
-    "react-slideshow-image": "^3.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
     "react-tabs": "^3.1.1",
     "react-web-media-player": "^1.1.6",
-    "styled-components": "^5.0.1",
+    "styled-components": "^5.1.1",
     "styled-media-query": "^2.1.2",
     "swiper": "^5.4.5"
   },
@@ -35,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:db": "json-server --watch db.json --port 3001"
   },
   "eslintConfig": {
     "extends": "react-app"
